# SteinerPy

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  benchmark_compare.py  benchmark_pcstp.py  codecov.yml  example.ipynb  pyproject.toml  requirements.txt
.github/workflows/: bump-version.yml  ci-cd.yml
benchmarks/: README.md  __init__.py  optima.py  run_benchmarks.py  slurm_array.sh  stp_parser.py
docs/source/: conf.py  index.md
docs/source/api/: steinerpy.rst
docs/source/extras/: references.md
docs/source/guide/: benchmarks.md  performance.md  solvers.md  variants.md
docs/source/setup/: citing.md  getting_started.md  installation.md
src/: _version.py  mathematical_model.py  objects.py
steinerpy/: __init__.py  _fastgraph.py  _parallel.py  _version.py  dreyfus_wagner.py  dual_ascent.py  graph_reducer.py  mathematical_model.py  objects.py  pc_reductions.py  pc_transform.py  rectilinear.py
tests/: __init__.py  test_directed_group_steiner.py  test_dreyfus_wagner.py  test_dual_ascent.py  test_graph_reducer.py  test_group_steiner.py  test_heavy_reductions.py  test_hop_constrained.py  test_model_speedups.py  test_mwcsb.py  test_node_replacement.py  test_partial_terminal.py  test_pc_reductions.py  test_pc_transform.py  test_rectilinear.py  test_steiner_problem.py  test_terminal_contraction.py
