[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steinerpy"
version = "1.0.5"
description = "Package to solve Steiner Tree and Steiner Forest Problems with the HiGHS solver"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Berend Markhorst"},
    {name = "Joost Berkhout"},
    {name = "Alessandro Zocca"},
    {name = "Jeroen Pruyn"},
    {name = "Rob van der Mei"},
]
maintainers = [
    {name = "Berend Markhorst", email = "berend.markhorst@gmail.com"},
]
keywords = ["steiner", "tree", "forest", "optimization", "graph", "networkx", "highs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "highspy",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
# The docs toolchain does not support Python 3.8/3.9; the marker keeps the
# universal uv resolution satisfiable across requires-python >= 3.8. Docs are
# built on Python 3.12 (see .readthedocs.yaml).
docs = [
    "sphinx>=7.0; python_version >= '3.10'",
    "furo; python_version >= '3.10'",
    "myst-nb; python_version >= '3.10'",
    "sphinx-copybutton; python_version >= '3.10'",
]

[project.urls]
Homepage = "https://github.com/berendmarkhorst/SteinerPy"
Repository = "https://github.com/berendmarkhorst/SteinerPy"
Issues = "https://github.com/berendmarkhorst/SteinerPy/issues"
Documentation = "https://steinerpy.readthedocs.io"
Changelog = "https://github.com/berendmarkhorst/SteinerPy/releases"

[tool.hatch.build.targets.wheel]
packages = ["steinerpy"]

[tool.hatch.build.targets.sdist]
include = [
    "/steinerpy",
    "/README.md",
    "/LICENSE",
    "/requirements.txt",
    "/example.ipynb",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=steinerpy --cov-report=html --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
